# rails-issues

./: .env.example  README.md  notebook.ipynb  pyproject.toml
data/: data.pickle  raw.pickle  raw_data.pickle
src/: __init__.py  extract.py  extractor.py  transform.py
src/core/: __init__.py  config.py
