
[tool.poetry]
name = "rails-issues-analysis"
version = "0.1.0"
description = ""
authors = ["Henri Aïdasso <ahenrij@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
seaborn = "^0.11.2"
matplotlib = "^3.5.1"
requests = "2.20.1"
pandas = "^1.4.1"
numpy = "^1.22.3"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
